--- a/Rashed.html
+++ b/Rashed.html
@@ -7,15 +7,42 @@
 <body>
 <table border="1" width="1000" align="center">
     <tr>
-        <td height="200" width="200"></td>
+        <td height="200" width="200">
+            <img src="../photo.jpg" height="200" width="200" alt=""/>
+        </td>
         <td></td>
     </tr>
     <tr>
-        <td height="50" colspan="2"></td>
+        <td height="50" colspan="2" align="center"> 
+            <a href="file:///D:/Sheuli/Rashed-soc/Rashed.html"> Home </a> ||
+            <a href="About.html"> About </a> ||
+            <a href="CV.html"> CV </a> ||
+            <a href="Gallery.html"> Gallery </a> ||
+            <a href="Contact.html"> contact </a>
+        </td>
     </tr>
     <tr>
         <td height="600"></td>
-        <td></td>
+        <td valign="top">
+            <h1 align="center"> <b>My self</b> </h1>
+            <p>To make the world better than today where in everybody will share <strong>same life chance </strong>. There will be no inequlity. Everybody will respect others opinion, intersts and will love one another.</p>
+            <h1 align="center"> <b> Mission</b></h1>
+            <p> Through commitment to people, my country and the world. I would like to give the world a providing <ins> better efficiency and acceptency </ins>, <ins></ins> making the next generation quality educated and hard working </ins></ins>. </p>
+
+            <h1 align="center"> 10 Things That I Like </h1>
+            <p>1. To be honest </p>
+            <p>2. To help human</p>
+            <p>3. To make some unique reserach </p>
+            <p>4. To make worldwide famous website </p>
+            <p>5. To make my parents happy and proudful </p>
+            <p>6. To make my family cheerful </p>
+            <p>1.</p>
+            <p>1.</p>
+            <p>1.</p>
+            <p>1.</p>
+
+
+        </td>
     </tr>
     <tr>
         <td colspan="2" height="50"></td>
